--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,7 @@
-<h1>You are logged in.........</h1>
+<div class="media">
+    <img class="align-self-start mr-3" src="{{user.image}}">
+    <div class="media-body">
+        <h5 class="mt-0">{{user.fullname}}</h5>
+        <p>Email: {{user.email}}</p>
+    </div>
+</div>
