--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,9 @@
 <div id="homepage" class="container">
     <h1>Welcome</h1>
     <h1>Social media app</h1>
+     {{#if user}}
+      <p>YOU ARE LOGGED IN</p>        
+      {{else}}
        <h1>
              <a href="/auth/google" class="btn-social btn-gplus btn-lg">
              <i class="fa fa-google-plus"></i>Login With Google
@@ -17,4 +20,5 @@
             <i class="fa fa-instagram"></i>Login With Instagram
             </a>
         </h1>
+        {{/if}}
 </div>
