--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/">Social Media App</a>
+  {{#if user}}
+  <a class="navbar-brand" href="/profile">Welcome,{{user.firstname}}</a>
+  {{else}}
+  {{/if}} 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,7 +14,10 @@
             <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+        {{#if user}}
+         <a class="navbar-brand" href="/logout"><i class="fa fa-sign-out" >Logout</i></a>
+        {{else}}
+         {{/if}} 
         </li>
         </ul>
     </div>
