--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,24 @@
-<div class="media">
-    <img class="align-self-start mr-3" src="{{user.image}}">
-    <div class="media-body">
-        <h5 class="mt-0">{{user.fullname}}</h5>
-        <p>Email: {{user.email}}</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{user.image}}">
+            <div class="card-body">
+                <h5 class="card-title">{{user.fullname}}</h5>
+            </div>
+        </div>
+        </div>
+        <div class="col-sm-4">
+            <h1>Profile</h1>
+            <p class="card-text"><i class="fa fa-user"></i> {{user.fullname}}</p>
+            {{#if user.email}}
+            <p class="card-text"><i class="fa fa-envelope"></i> {{user.email}}</p>
+            {{else}}
+            <form action="/addEmail" method="POST">
+            <input type="text" name="email" class="form-control" placeholder="Enter Email Address">
+            <button class="btn-btn-danger" type="submit">Save</button>
+            </form>
+            {{/if}}
+        </div>
     </div>
 </div>
